# KindleClippingsToJEX

./: .editorconfig  .gitignore  CONTRIBUTING.md  KindleToJEX.spec  LICENSE  README.md  build_exe.bat  cli.py  config.sample.json  gui.py  import_cipplings.csv  joplin.py  kindle.py  languages.json  main.py  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: build.yml  quality.yml
assets/: README.txt
config/: config.sample.json
docs/: ARCHITECTURE.md
domain/: constants.py  joplin.py  models.py
exporters/: base.py  csv_exporter.py  joplin_exporter.py  json_exporter.py  markdown_exporter.py
parsers/: kindle_parser.py  patterns.py
resources/: styles.qss  styles_dark.qss
services/: clippings_service.py  deduplication_service.py  identity_service.py
src/domain/: models.py
src/exporters/: joplin_exporter.py
src/parsers/: kindle_parser.py
src/services/: clippings_service.py
src/utils/: logging_config.py
tests/: test_bom_handling.py  test_csv_exporter.py  test_domain.py  test_exporter.py  test_integration.py  test_json_exporter.py  test_markdown_exporter.py  test_new_features.py  test_parser.py  test_service.py  test_text_cleaner.py  test_text_cleaner_safety.py  test_ui_mock.py
ui/: main_window.py  settings_dialog.py  threads.py  widgets.py
utils/: config_manager.py  convert_icon.py  logging_config.py  text_cleaner.py  title_cleaner.py
