[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KindleClippingsToJEX"
version = "0.2.0"
description = "Convert Kindle clippings to Joplin JEX format"
authors = [
    {name = "Andrés Jiménez", email = "andresjimenezrios@gmail.com"},
]
dependencies = [
    "dateparser",
    "PyQt5",
]
requires-python = ">=3.8"

[project.scripts]
kindle-to-jex = "cli:main"
kindle-to-jex-gui = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
