[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KindleClippingsToJEX"
version = "0.2.0"
description = "Convert Kindle clippings to Joplin JEX format"
authors = [
    {name = "Andrés Jiménez", email = "andresjimenezrios@gmail.com"},
]
dependencies = [
    "dateparser==1.2.2",
    "PyQt5==5.15.11",
    "Pillow==12.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "coverage",
    "ruff",
    "pipdeptree",
    "mypy",
    "pytest"
]

[project.scripts]
kindle-to-jex = "cli:main"
kindle-to-jex-gui = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]

ignore = []

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
    "tests"
]
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
pythonpath = [
    "."
]

